drupal/profiles/takepart/themes/takepart3/campaigns/intelchange/intelchange.css
/* ... */
.cta a {
  display: block;
  position: relative;
  color: #fff;
  padding: 35px 50px;
  text-decoration: none;
}

.cta a:after {
  display: block;
  position: absolute;
  right: 26px;
  top: 50%;
  margin-top: -8px;
  background: url(/profiles/takepart/themes/takepart3/campaigns/intelchange/images/cta_arrow.png);
  content: " ";
  width: 11px;
  height: 16px;
}

.cta a * {
  color: #fff;
}

.cta h4 {
  font-size: 1.55em;
  margin-bottom: 10px;
}

.cta p {
  font-size: .875em;
}

/* More link */

.more {
  font-size: .875em;
}

.more a {
  color: #f37424;
  display: inline-block;
  padding-right: 36px;
  position: relative;
  text-decoration: none;
  text-transform: uppercase;
  line-height: 18px;
  font-weight: bold;

  -webkit-transition: color .2s ease-in-out;
  transition: color .2s ease-in-out;
}

.more a:after {
  background: url(/profiles/takepart/themes/takepart3/campaigns/intelchange/images/more_arrow_sprite.png) top left no-repeat;
  width: 18px;
  height: 18px;
  content: " ";
  display: block;
  position: absolute;
  left: 100%;
  top: 0;
  margin-left: -24px;

  -webkit-transition: margin .2s ease-in-out;
  transition: margin .2s ease-in-out;
}

.more a:hover,
.more a:focus {
  color: #d95604;
}

.more a:hover:after,
.more a:focus:after {
  margin-left: -18px;
  background-position: left -18px;
}

/* important link (button) */

.important a {
  background: #f37424;
  font-weight: bold;
  color: #fff;
  padding: 20px 45px;
  display: inline-block;
  border-radius: 2px;
  text-decoration: none;
  text-transform: uppercase;

  -webkit-transition: background-color .2s ease-in-out;
  transition: background-color .2s ease-in-out;
}

.important a:focus,
.important a:hover {
  background: #d95604;
}

/* close button */

.close a {
  background: url(/profiles/takepart/themes/takepart3/campaigns/intelchange/images/close_video_sprite.png) left top no-repeat;
  display: block;
  width: 36px;
  height: 36px;
  white-space: nowrap;
  text-indent: 100%;
  overflow: hidden;
}

.close a:hover {
  background-position: left -36px;
}

/* # Page Specific
================================================== */

/* Home ---------------- */

.page-wordlet-intelchange-home .first-block {
  background: #2e2425 url(/profiles/takepart/themes/takepart3/campaigns/intelchange/images/home_top_bg.jpg) left top;
  color: #fff;

  float: left;
  width: 100%;
  position: relative;
}

.page-wordlet-intelchange-home .intro-image {
  float: left;
}

.page-wordlet-intelchange-home .intro-image img {
  display: block;
}

.page-wordlet-intelchange-home .intro-content {
  padding-right: 290px;
  float: left;
}

.page-wordlet-intelchange-home .intro-text {
  margin-left: 95px;
  margin-bottom: 65px;
}

.page-wordlet-intelchange-home .video-play {
  position: absolute;
  right: 95px;
  top: 50%;
  margin-top: -61px;
}

.page-wordlet-intelchange-home .video-play a {
  overflow: hidden;
  white-space: nowrap;
  display: block;
  text-indent: 100%;
  background: url(/profiles/takepart/themes/takepart3/campaigns/intelchange/images/watch_video_sprite.png) left top no-repeat;
  width: 123px;
  height: 123px;
}

.page-wordlet-intelchange-home .video-play a:hover {
  background-position: left -123px;
}

.page-wordlet-intelchange-home .intro-blurb {
  font-size: .875em;
  padding-top: 45px;
  line-height: 1.71;
}

.page-wordlet-intelchange-home .intro-link {
  margin: 1.75em 0 0 0;
  font-weight: bold;
}

.page-wordlet-intelchange-home .video-block {
  position: relative;
  padding: 35px;
  text-align: center;
}

.page-wordlet-intelchange-home .video-block .close a {
  position: absolute;
  right: 115px;
  top: 35px;
}

/* second block - first sub */
.page-wordlet-intelchange-home .first-sub {
  padding: 60px 55px;
  width: 405px;
  float: left;
}
.page-wordlet-intelchange-home #page .second-block .first-sub .vote-desc {
  line-height: 1.5em;
  margin-bottom: 1.5em;
  font-size: .875em;
}
.page-wordlet-intelchange-home #page .second-block .first-sub .prize-image {
  text-align: center;
  margin-bottom: 1.5em;
}
.page-wordlet-intelchange-home #page .second-block .first-sub .header-block {
  margin-bottom: 2.5em;
}
.page-wordlet-intelchange-home #page .second-block .first-sub h3 {
  color: rgb(1, 141, 216);
  font-size: 2.500em;
  margin-bottom: 0.425em;
}
.page-wordlet-intelchange-home #page .second-block .first-sub h4 {
  font-size: 1.375em;
  color: rgb(75, 54, 57);
}
.page-wordlet-intelchange-home #page .second-block .first-sub .important {
  margin-bottom: 1.5em;
}
.page-wordlet-intelchange-home #page .second-block .first-sub .important a {
  display: block;
  padding: 1em 0;
  text-align: center;
  font-size: 1.143em;
}

/* second block - second sub */
.page-wordlet-intelchange-home .second-block .second-sub {
  width: 425px;
  float: left;
  margin-right: 30px;
  color: #313131;
  position: relative;
  padding: 6px;
  top: -20px;
  color: #fff;
}

.page-wordlet-intelchange-home .second-block .second-sub:after {
  -ms-transform: rotate(0.5deg);
  -moz-transform: rotate(0.5deg);
  -webkit-transform: rotate(0.5deg);
  -o-transform: rotate(0.5deg);
  transform: rotate(0.5deg);
  background: #1fa2dc;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: " ";
  z-index: 0;
}
.form-content {
  height: 100%;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}
.page-wordlet-intelchange-home .second-block .second-sub div {
  position: relative;
  z-index: 1;
}

.page-wordlet-intelchange-home .form-blurb {
  font-size: .875em;
}

.page-wordlet-intelchange-home .default-content {
  background: #026fab;
  margin-bottom: 5px;
  padding: 30px 40px;
}

.page-wordlet-intelchange-home .default-content h3 {
  font-size: 25px;
  line-height: 1.3;
  margin-bottom: 1em;
}

.page-wordlet-intelchange-home .finalists-menu {
  white-space: nowrap;
  overflow: hidden;
}
/* ... */

